--- a/templates/index.html
+++ b/templates/index.html
@@ -35,6 +35,7 @@
         }
 
         .title {
+            display: block;
             width: 100px;
             margin: auto;
         }
@@ -72,7 +73,7 @@
             height: 100%;
         }
 
-        .exhibits{
+        .exhibits-link{
             width: 400px;
             margin: 150px auto;
             display: block;
@@ -92,25 +93,12 @@
 </head>
 
 <body>
-
-
-    <!-- <div class="card-columns">
-        <div class="card">
-            <img class="card-img-top" src="..." alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Card title that wraps to a new line</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                    content. This content is a little bit longer.</p>
-            </div>
-        </div>
-    </div> -->
-
     <div id="wrap">
+        <!-- 헤더 -->
         <div id="header">
-            <div class="title">
-                <a href="/index" style="text-decoration: none;"><h1>오 전</h1></a>
-            </div>
+            <a class="title" href="/index" style="text-decoration: none;"><h1>오 전</h1></a>
         </div>
+        <!-- 내비게이션 -->
         <div id="container">
             <div id="aside">
                 <nav class="nav flex-column" style="color: #68665f;">
@@ -127,15 +115,12 @@
                     <a class="nav-link" href="#">로그아웃</a>
                 </nav>
             </div>
+            <!-- 전시 목록 -->
             <div id="contents">
-                <!-- <div class="exhibits"> -->
-                    <a class="exhibits" href="#"><img src="https://ticketimage.interpark.com/Play/image/large/20/20009147_p.gif" alt="poster_img"></a>
-                <!-- </div> -->
+                <a class="exhibits-link" href="#"><img src="https://ticketimage.interpark.com/Play/image/large/20/20009147_p.gif" alt="poster_img"></a>
             </div>
         </div>
     </div>
-    </div>
-
 </body>
 
 </html>
