--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Webpage Title -->
     <title>오전, 오늘의 전시</title>
@@ -79,7 +82,7 @@
             display: block;
         }
 
-        img {
+        #contents .exhibits-link img {
             width: 400px;
             object-fit: cover;
 
@@ -96,14 +99,14 @@
     <div id="wrap">
         <!-- 헤더 -->
         <div id="header">
-            <a class="title" href="/index" style="text-decoration: none;"><h1>오 전</h1></a>
+            <a class="title" href="/" style="text-decoration: none;"><h1>오 전</h1></a>
         </div>
         <!-- 내비게이션 -->
         <div id="container">
             <div id="aside">
                 <nav class="nav flex-column" style="color: #68665f;">
                     <br>
-                    <a class="nav-link" href="#" style="font-size: 30px;">오늘의 전시</a>
+                    <a class="nav-link" href="/" style="font-size: 30px;">오늘의 전시</a>
                     <br>
                     <br>
                     <a class="nav-link active" aria-current="page" href="#">인기 전시</a>
