--- a/templates/index.html
+++ b/templates/index.html
@@ -10,50 +10,114 @@
     <title>오전, 오늘의 전시</title>
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@200&display=swap" rel="stylesheet">
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+        crossorigin="anonymous"></script>
+
+    <script>
+        function sign_out() {
+            $.removeCookie('mytoken', { path: '/' });
+            alert('로그아웃되었습니다.')
+            window.location.href = "/"
+        }
+
+        window.onload = function () {
+            checking_cookie()
+            showinfo()
+        };
+
+        function checking_cookie() {
+            // checking cookie
+            var cookie = document.cookie;
+            // 로그인 상태이면 마이페이지/로그아웃 show, 로그인 hide
+            if (cookie != "") {
+                console.log("로그인상태")
+                $("#mypage").show();
+                $("#logout").show();
+                $("#login").hide();
+            }
+            //비로그인 상태이면 로그인 show, 마이페이지/로그아웃 hide
+            else {
+                console.log("로그인하세요")
+                $("#login").show();
+                $("#mypage").hide();
+                $("#logout").hide();
+            }
+        }
+
+        // 전시 정보 get
+        function showinfo() {
+            $.ajax({
+                type: "GET",
+                url: "/info",
+                data: {},
+                success: function (response) {
+                    let shows = response['all_info']
+                    for (let i = 0; i < 15; i++) {
+                        let title = shows[i]['title']
+                        let date = shows[i]['date']
+                        let img = shows[i]['img']
+                        let title_fix = shows[i]['title_fix']
+                        let location = shows[i]['location']
+                        let location_url = shows[i]['location_url']
+
+                        let temp_html = `<a class="exhibits-link" href="${title_fix}"><img src="${img}" alt="poster_img"></a>`
+                        $('#contents').append(temp_html)
+                    }
+                }
+            })
+        }
+
+    </script>
 
     <style>
         * {
             font-family: 'Noto Serif KR', serif;
             color: #68665f;
         }
+
         /* .nav-link{
             color: #68665f;
             font-size: large;
         } */
-        
+
         body {
             background-color: rgb(253, 253, 252);
         }
-        
+
         .title {
             display: block;
             width: 100px;
             margin: auto;
         }
-        
+
         #wrap {
             height: 100vh;
         }
-        
+
         #header {
+
             text-align: center;
             padding: 20px;
+
             height: 10vh;
             min-height: 50px;
         }
-        
+
         #container {
             height: 90vh;
+
         }
-        
+
         #aside {
             float: left;
             width: 15%;
@@ -61,24 +125,33 @@
             border-right: rgb(202, 202, 202) solid 1px;
             text-decoration: none;
         }
-        
+
         #contents {
             float: left;
+
             width: 85%;
             height: 100%;
+
+            white-space: nowrap;
+            overflow-x: auto;
         }
-        
+
+        #contents::::-webkit-scrollbar-track {
+            display: none;
+        }
+
         .exhibits-link {
-            width: 400px;
-            margin: 150px auto;
-            display: block;
+            width: 40vh;
+            margin: 20vh 100px 0;
+            display: inline-block;
         }
 
         #contents .exhibits-link img {
-            width: 400px;
+            width: 40vh;
             object-fit: cover;
+
         }
-        
+
         .nav-link {
             color: #68665f;
         }
@@ -90,7 +163,9 @@
     <div id="wrap">
         <!-- 헤더 -->
         <div id="header">
-            <a class="title" href="/" style="text-decoration: none;"><h1>오 전</h1></a>
+            <a class="title" href="/" style="text-decoration: none;">
+                <h1>오 전</h1>
+            </a>
         </div>
         <!-- 내비게이션 -->
         <div id="container">
@@ -104,14 +179,14 @@
                     <a class="nav-link" href="#">전시 검색</a>
                     <a class="nav-link" href="#">종료 임박 전시</a>
                     <br>
-                    <a class="nav-link" href="/login">로그인</a>
-                    <a class="nav-link" href="/mypage">마이페이지</a>
-                    <a class="nav-link" href="#">로그아웃</a>
+                    <a class="nav-link" href="/login" id="login">로그인</a>
+                    <a class="nav-link" href="/user" id="mypage">마이페이지</a>
+                    <a class="nav-link" onclick='sign_out()' href="#" id="logout">로그아웃</a>
                 </nav>
             </div>
             <!-- 전시 목록 -->
             <div id="contents">
-                <a class="exhibits-link" href="#"><img src="https://ticketimage.interpark.com/Play/image/large/20/20009147_p.gif" alt="poster_img"></a>
+                
             </div>
         </div>
     </div>
