오전 프로젝트 2일차
오전 2일차
개인별 전시회 리뷰 작성, 조회, 삭제
개인별 전시회 찜하기 기능, 조회, 삭제
설계 완료.

--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
             margin: 150px auto;
             display: block;
         }
-
+        
         #contents .exhibits-link img {
             width: 400px;
             object-fit: cover;
@@ -90,7 +90,9 @@
     <div id="wrap">
         <!-- 헤더 -->
         <div id="header">
-            <a class="title" href="/" style="text-decoration: none;"><h1>오 전</h1></a>
+            <a class="title" href="/" style="text-decoration: none;">
+                <h1>오 전</h1>
+            </a>
         </div>
         <!-- 내비게이션 -->
         <div id="container">
