--- a/templates/show.html
+++ b/templates/show.html
@@ -10,53 +10,49 @@
     <title>오전, 오늘의 전시</title>
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@200&display=swap" rel="stylesheet">
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 
-        <script>
-        
-            $(document).ready(function () {
-                $("#reviews-box").html("");
-                showReview();
-            });
-    
-            // function makeReview() {
-            //     $.ajax({
-            //         type: "POST",
-            //         url: "/review",
-            //         data: {sample_give:'샘플데이터'},
-            //         success: function (response) {
-            //             alert(response["msg"]);
-            //             window.location.reload();
-            //         }
-            //     })
-            // }
-    
-            function showReview() {
-                $.ajax({
-                    type: "GET",
-                    url: "/review",
-                    data: {},
-                    success: function (response) {
-                        let shows = response['all_shows']
-                        for (let i = 0; i < shows.length; i++){
-                            let title = shows[i]['title']
-                            let date = shows[i]['date']
-                            let img = shows[i]['img']
-                            let title_fix = shows[i]['title_fix']
-                            let location = shows[i]['location']
-                            let location_url = shows[i]['location_url']
-                            console.log(title,date,img,location,title_fix,location_url)
-                            let temp_html = `<div class="card">
+    <script>
+        $(document).ready(function() {
+            $("#reviews-box").html("");
+            showReview();
+        });
+
+        // function makeReview() {
+        //     $.ajax({
+        //         type: "POST",
+        //         url: "/review",
+        //         data: {sample_give:'샘플데이터'},
+        //         success: function (response) {
+        //             alert(response["msg"]);
+        //             window.location.reload();
+        //         }
+        //     })
+        // }
+
+        function showReview() {
+            $.ajax({
+                type: "GET",
+                url: "/review",
+                data: {},
+                success: function(response) {
+                    let shows = response['all_shows']
+                    for (let i = 0; i < shows.length; i++) {
+                        let title = shows[i]['title']
+                        let date = shows[i]['date']
+                        let img = shows[i]['img']
+                        let title_fix = shows[i]['title_fix']
+                        let location = shows[i]['location']
+                        let location_url = shows[i]['location_url']
+                        console.log(title, date, img, location, title_fix, location_url)
+                        let temp_html = `<div class="card">
                                                 <img class="card-img-top" src="${img}" alt="Card image cap">
                                                 <div class="card-body">
                                                     <a href="${title_fix}">${title} </a>
@@ -64,17 +60,16 @@
                                                     <a href="${location_url}">${location}</a>
                                                 </div>
                                             </div>`
-                        $('#show-cards').append(temp_html)                       
-                        }
+                        $('#show-cards').append(temp_html)
                     }
-                })
-            }
-    
-            function to_main(){
-                 window.location.href = "/"
-             }
-    
-        </script>
+                }
+            })
+        }
+
+        function to_main() {
+            window.location.href = "/"
+        }
+    </script>
 
 
     <style>
@@ -82,40 +77,36 @@
             font-family: 'Noto Serif KR', serif;
             color: #68665f;
         }
-
         /* .nav-link{
             color: #68665f;
             font-size: large;
         } */
-
+        
         body {
             background-color: rgb(253, 253, 252);
         }
-
+        
         .title {
             display: block;
             width: 100px;
             margin: auto;
         }
-
+        
         #wrap {
             height: 100vh;
         }
-
+        
         #header {
-
             text-align: center;
             padding: 20px;
-
             height: 10vh;
             min-height: 50px;
         }
-
+        
         #container {
             height: 90vh;
-
         }
-
+        
         #aside {
             float: left;
             width: 15%;
@@ -123,45 +114,41 @@
             border-right: rgb(202, 202, 202) solid 1px;
             text-decoration: none;
         }
-
+        
         #contents {
             float: left;
-
             width: 85%;
             height: 100%;
         }
-
-        .exhibits-link{
+        
+        .exhibits-link {
             width: 400px;
             margin: 150px auto;
             display: block;
         }
-
+        
         #contents .exhibits-link img {
             width: 400px;
             object-fit: cover;
-
         }
-
-        .nav-link{
+        
+        .nav-link {
             color: #68665f;
         }
-
+        
         .card {
-            width:300px;
-            height:550px;
+            width: 300px;
+            height: 550px;
             display: inline-block;
-            
-            
         }
-
-        .card-columns{
-            width:150vh;
-            left:18%;
-            text-align:center;
+        
+        .card-columns {
+            width: 150vh;
+            left: 18%;
+            text-align: center;
             display: flex;
             flex-direction: row;
-            flex-wrap:wrap;
+            flex-wrap: wrap;
         }
     </style>
 
@@ -171,7 +158,9 @@
     <div id="wrap">
         <!-- 헤더 -->
         <div id="header">
-            <a class="title" href="/" style="text-decoration: none;"><h1>오 전</h1></a>
+            <a class="title" href="/" style="text-decoration: none;">
+                <h1>오 전</h1>
+            </a>
         </div>
         <!-- 내비게이션 -->
         <div id="container">
@@ -192,7 +181,7 @@
             </div>
             <!-- 전시 목록 -->
             <div class="card-columns" id="show-cards">
-                
+
             </div>
         </div>
     </div>
