--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -145,7 +145,7 @@
                                              <div class="card-body">
                                              <h5 class="card-title">${title}</h5>
                                              <p class="card-text">${content}</p>
-                                             <button onclick="delete_diary(${title})" type="button" class="btn btn-light float-right">삭제하기</button>
+                                             <button onclick="delete_diary('${file}')" type="button" class="btn btn-light float-right">삭제하기</button>
                                             </div>
                                          </div>`;
                         $('#cards-box').append(temp_html);
@@ -220,7 +220,9 @@
 
 
                         let temp_html = `<div class="card" >
-                                             <img class="card-img-top" onclick="goticket(${title_url})" src="${img}" id="card-img" alt="Card image cap">
+                                             <a href="http://www.interpark.com/${title_url}">
+                                             <img class="card-img-top" src="${img}" id="card-img" alt="Card image cap">
+                                             </a>
                                              <div class="card-body">
                                              <h5 class="card-title">${title}</h5>
                                              <p class="card-text">${content}</p>
@@ -234,12 +236,15 @@
             })
         }
 
-        function delete_diary(title) {
+
+        function delete_diary(file) {
+
+
             $.ajax({
                 type: 'POST',
                 url: '/mypage/delete',
                 data: {
-                    title_give: title
+                    file_give: file
                 },
                 success: function(response) {
                     alert(response['msg']);
