--- a/templates/index.html
+++ b/templates/index.html
@@ -1,181 +1,189 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Webpage Title -->
     <title>오전, 오늘의 전시</title>
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@200&display=swap" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@200&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-        crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+      crossorigin="anonymous"
+    ></script>
 
     <script>
-        function sign_out() {
-            $.removeCookie('mytoken', { path: '/' });
-            alert('로그아웃되었습니다.')
-            window.location.href = "/"
+      function sign_out() {
+        $.removeCookie("mytoken", { path: "/" });
+        alert("로그아웃되었습니다.");
+        window.location.href = "/";
+      }
+
+      window.onload = function () {
+        checking_cookie();
+        showinfo();
+      };
+
+      function checking_cookie() {
+        // checking cookie
+        var cookie = document.cookie;
+        // 로그인 상태이면 마이페이지/로그아웃 show, 로그인 hide
+        if (cookie != "") {
+          console.log("로그인상태");
+          $("#mypage").show();
+          $("#logout").show();
+          $("#login").hide();
         }
+        //비로그인 상태이면 로그인 show, 마이페이지/로그아웃 hide
+        else {
+          console.log("로그인하세요");
+          $("#login").show();
+          $("#mypage").hide();
+          $("#logout").hide();
+        }
+      }
 
-        window.onload = function() {
-            checking_cookie()
-            showinfo()
-        };
+      // 전시 정보 get
+      function showinfo() {
+        $.ajax({
+          type: "GET",
+          url: "/info",
+          data: {},
+          success: function (response) {
+            let shows = response["all_info"];
+            for (let i = 0; i < 15; i++) {
+              let title = shows[i]["title"];
+              let date = shows[i]["date"];
+              let img = shows[i]["img"];
+              let title_fix = shows[i]["title_fix"];
+              let location = shows[i]["location"];
+              let location_url = shows[i]["location_url"];
 
-        function checking_cookie() {
-            // checking cookie
-            var cookie = document.cookie;
-            // 로그인 상태이면 마이페이지/로그아웃 show, 로그인 hide
-            if (cookie != "") {
-                console.log("로그인상태")
-                $("#mypage").show();
-                $("#logout").show();
-                $("#login").hide();
+              let temp_html = `<a class="exhibits-link" href="${title_fix}"><img src="${img}" alt="poster_img"></a>`;
+              $("#contents").append(temp_html);
             }
-            //비로그인 상태이면 로그인 show, 마이페이지/로그아웃 hide
-            else {
-                console.log("로그인하세요")
-                $("#login").show();
-                $("#mypage").hide();
-                $("#logout").hide();
-            }
-        }
-
-        // 전시 정보 get
-        function showinfo() {
-            $.ajax({
-                type: "GET",
-                url: "/info",
-                data: {},
-                success: function(response) {
-                    let shows = response['all_info']
-                    for (let i = 0; i < 15; i++) {
-                        let title = shows[i]['title']
-                        let date = shows[i]['date']
-                        let img = shows[i]['img']
-                        let title_fix = shows[i]['title_fix']
-                        let location = shows[i]['location']
-                        let location_url = shows[i]['location_url']
-
-                        let temp_html = `<a class="exhibits-link" href="${title_fix}"><img src="${img}" alt="poster_img"></a>`
-                        $('#contents').append(temp_html)
-                    }
-                }
-            })
-        }
+          },
+        });
+      }
     </script>
     <style>
-        * {
-            font-family: 'Noto Serif KR', serif;
-            color: #68665f;
-        }
-        /* .nav-link{
+      * {
+        font-family: "Noto Serif KR", serif;
+        color: #68665f;
+      }
+      /* .nav-link{
             color: #68665f;
             font-size: large;
         } */
-        
-        body {
-            background-color: rgb(253, 253, 252);
-        }
-        
-        .title {
-            display: block;
-            width: 100px;
-            margin: auto;
-        }
-        
-        #wrap {
-            height: 100vh;
-        }
-        
-        #header {
-            text-align: center;
-            padding: 20px;
-            height: 10vh;
-            min-height: 50px;
-        }
-        
-        #container {
-            height: 90vh;
-        }
-        
-        #aside {
-            float: left;
-            width: 15%;
-            height: 100%;
-            border-right: rgb(202, 202, 202) solid 1px;
-            text-decoration: none;
-        }
-        
-        #contents {
-            float: left;
-            width: 85%;
-            height: 100%;
-            white-space: nowrap;
-            overflow-x: auto;
-        }
-        .exhibits-link {
-            width: 40vh;
-            margin: 20vh 100px 0;
-            display: inline-block;
-        }
-        
-        #contents .exhibits-link img {
-            width: 40vh;
-            object-fit: cover;
-        }
-        
-        .nav-link {
-            color: #68665f;
-        }
+
+      body {
+        background-color: rgb(253, 253, 252);
+      }
+
+      .title {
+        display: block;
+        width: 100px;
+        margin: auto;
+      }
+
+      #wrap {
+        height: 100vh;
+      }
+
+      #header {
+        text-align: center;
+        padding: 20px;
+        height: 10vh;
+        min-height: 50px;
+      }
+
+      #container {
+        height: 90vh;
+      }
+
+      #aside {
+        float: left;
+        width: 15%;
+        height: 100%;
+        border-right: rgb(202, 202, 202) solid 1px;
+        text-decoration: none;
+      }
+
+      #contents {
+        float: left;
+        width: 85%;
+        height: 100%;
+        white-space: nowrap;
+        overflow-x: auto;
+      }
+      .exhibits-link {
+        width: 40vh;
+        margin: 20vh 100px 0;
+        display: inline-block;
+      }
+
+      #contents .exhibits-link img {
+        width: 40vh;
+        object-fit: cover;
+      }
+
+      .nav-link {
+        color: #68665f;
+      }
     </style>
+  </head>
 
-</head>
-
-<body>
+  <body>
     <div id="wrap">
-        <!-- 헤더 -->
-        <div id="header">
-            <a class="title" href="/" style="text-decoration: none;">
-                <h1>오 전</h1>
-            </a>
+      <!-- 헤더 -->
+      <div id="header">
+        <a class="title" href="/" style="text-decoration: none">
+          <h1>오 전</h1>
+        </a>
+      </div>
+      <!-- 내비게이션 -->
+      <div id="container">
+        <div id="aside">
+          <nav class="nav flex-column" style="color: #68665f">
+            <br />
+            <a class="nav-link" href="/" style="font-size: 30px">오늘의 전시</a>
+            <br />
+            <br />
+            <a class="nav-link active" aria-current="page" href="/show"
+              >인기 전시</a
+            >
+            <a class="nav-link" href="#">전시 검색</a>
+            <a class="nav-link" href="#">종료 임박 전시</a>
+            <br />
+            <a class="nav-link" href="/login" id="login">로그인</a>
+            <a class="nav-link" href="/user" id="mypage">마이페이지</a>
+            <a class="nav-link" onclick="sign_out()" href="#" id="logout"
+              >로그아웃</a
+            >
+          </nav>
         </div>
-        <!-- 내비게이션 -->
-        <div id="container">
-            <div id="aside">
-                <nav class="nav flex-column" style="color: #68665f;">
-                    <br>
-                    <a class="nav-link" href="/" style="font-size: 30px;">오늘의 전시</a>
-                    <br>
-                    <br>
-                    <a class="nav-link active" aria-current="page" href="#">인기 전시</a>
-                    <a class="nav-link" href="#">전시 검색</a>
-                    <a class="nav-link" href="#">종료 임박 전시</a>
-                    <br>
-                    <a class="nav-link" href="/login" id="login">로그인</a>
-                    <a class="nav-link" href="/user" id="mypage">마이페이지</a>
-                    <a class="nav-link" onclick='sign_out()' href="#" id="logout">로그아웃</a>
-                </nav>
-            </div>
-            <!-- 전시 목록 -->
-            <div id="contents">
-                
-            </div>
-        </div>
+        <!-- 전시 목록 -->
+        <div id="contents"></div>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
