--- a/templates/index.html
+++ b/templates/index.html
@@ -161,12 +161,12 @@
                     <a class="nav-link" href="/" style="font-size: 30px;">오늘의 전시</a>
                     <br>
                     <br>
-                    <a class="nav-link active" aria-current="page" href="#">인기 전시</a>
+                    <a class="nav-link active" aria-current="page" href="/show">인기 전시</a>
                     <a class="nav-link" href="#">전시 검색</a>
                     <a class="nav-link" href="#">종료 임박 전시</a>
                     <br>
                     <a class="nav-link" href="/login" id="login">로그인</a>
-                    <a class="nav-link" href="/user" id="mypage">마이페이지</a>
+                    <a class="nav-link" href="/mypage" id="mypage">마이페이지</a>
                     <a class="nav-link" onclick='sign_out()' href="#" id="logout">로그아웃</a>
                 </nav>
             </div>
