--- a/templates/show.html
+++ b/templates/show.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Webpage Title -->
-    <title>오전, 오늘의 전시</title>
+    <title>인기 전시</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -17,33 +17,23 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 
     <script>
         $(document).ready(function() {
             $("#reviews-box").html("");
             showReview();
+            checking_cookie()
         });
-
-        // function makeReview() {
-        //     $.ajax({
-        //         type: "POST",
-        //         url: "/review",
-        //         data: {sample_give:'샘플데이터'},
-        //         success: function (response) {
-        //             alert(response["msg"]);
-        //             window.location.reload();
-        //         }
-        //     })
-        // }
 
         function showReview() {
             $.ajax({
                 type: "GET",
-                url: "/review",
+                url: "/info",
                 data: {},
                 success: function(response) {
-                    let shows = response['all_shows']
+                    let shows = response['all_info']
                     for (let i = 0; i < shows.length; i++) {
                         let title = shows[i]['title']
                         let date = shows[i]['date']
@@ -51,7 +41,7 @@
                         let title_fix = shows[i]['title_fix']
                         let location = shows[i]['location']
                         let location_url = shows[i]['location_url']
-                        console.log(title, date, img, location, title_fix, location_url)
+                        
                         let temp_html = `<div class="card">
                                                 <img class="card-img-top" src="${img}" alt="Card image cap">
                                                 <div class="card-body">
@@ -69,6 +59,32 @@
         function to_main() {
             window.location.href = "/"
         }
+
+        function sign_out() {
+            $.removeCookie('mytoken', { path: '/' });
+            alert('로그아웃되었습니다.')
+            window.location.href = "/"
+        }
+
+        function checking_cookie() {
+            // checking cookie
+            var cookie = document.cookie;
+            // 로그인 상태이면 마이페이지/로그아웃 show, 로그인 hide
+            if (cookie != "") {
+                console.log("로그인상태")
+                $("#mypage").show();
+                $("#logout").show();
+                $("#login").hide();
+            }
+            //비로그인 상태이면 로그인 show, 마이페이지/로그아웃 hide
+            else {
+                console.log("로그인하세요")
+                $("#login").show();
+                $("#mypage").hide();
+                $("#logout").hide();
+            }
+        }
+
     </script>
 
 
@@ -174,9 +190,9 @@
                     <a class="nav-link" href="#">전시 검색</a>
                     <a class="nav-link" href="#">종료 임박 전시</a>
                     <br>
-                    <a class="nav-link" href="/login">로그인</a>
-                    <a class="nav-link" href="#">마이페이지</a>
-                    <a class="nav-link" href="#">로그아웃</a>
+                    <a class="nav-link" href="/login" id="login">로그인</a>
+                    <a class="nav-link" href="/mypage" id="mypage">마이페이지</a>
+                    <a class="nav-link" onclick='sign_out()' href="#" id="logout">로그아웃</a>
                 </nav>
             </div>
             <!-- 전시 목록 -->
