--- a/templates/show.html
+++ b/templates/show.html
@@ -176,6 +176,7 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+        justify-content: space-evenly;
       }
     </style>
   </head>
