--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -21,10 +21,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-        crossorigin="anonymous"></script>
-        
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+
     <title>마이페이지</title>
 
 
@@ -188,34 +186,15 @@
             })
         }
 
-        function wannadiaryposting() {
-            let title = $('#title').val()
-            let content = $("#content").val()
-            let img = $('#img').val()
-            let title_url = $('#title_url').val()
 
-            $.ajax({
-                type: "POST",
-                url: "/show/wannadiary",
-                data: {
-                    'title_give': title,
-                    'content_give': content,
-                    'img_give': img,
-                    'title_url_give': title_url
-                },
-                success: function(response) {
-                    console.log(response);
-                    alert(response["msg"]);
-                    window.location.reload();
-                }
-            })
-        }
 
-        function wannadiarylisting() {
+        function wannadiarylisting(title) {
             $.ajax({
                 type: "GET",
                 url: "/mypage/wannadiary",
-                data: {},
+                data: {
+                    title_give: title
+                },
                 success: function(response) {
                     let wannadiaries = response['all_wannadiary']
                     for (let i = 0; i < wannadiaries.length; i++) {
@@ -244,8 +223,6 @@
 
 
         function delete_diary(file) {
-
-
             $.ajax({
                 type: 'POST',
                 url: '/mypage/delete',
@@ -293,7 +270,9 @@
         }
 
         function sign_out() {
-            $.removeCookie('mytoken', { path: '/' });
+            $.removeCookie('mytoken', {
+                path: '/'
+            });
             alert('로그아웃되었습니다.')
             window.location.href = "/"
         }
@@ -319,8 +298,8 @@
                     <a class="nav-link" href="/" style="font-size: 30px;">오늘의 전시</a>
                     <br>
                     <br>
-                    <a class="nav-link active" aria-current="page" href="#">인기 전시</a>
-                    <a class="nav-link" href="#">전시 검색</a>
+                    <a class="nav-link active" aria-current="page" href="/show">인기 전시</a>
+                    <a class="nav-link" href="/show">전시 검색</a>
                     <a class="nav-link" href="#">종료 임박 전시</a>
                     <br>
                     <a class="nav-link" href="/login" id="login">로그인</a>
