--- a/templates/show.html
+++ b/templates/show.html
@@ -229,7 +229,7 @@
         
         .card {
             width: 300px;
-            height: 550px;
+            height: 650px;
             display: inline-block;
         }
         
@@ -240,7 +240,10 @@
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
+            justify-content: space-evenly;
         }
+
+    
     </style>
 </head>
 
@@ -282,9 +285,9 @@
                 alt="Card image cap"
               />
               <div class="card-body">
-                <a href=" {{ show.title_fix }} "> {{ show.title }} </a>
-                    <p class="card-text">{{ show['date'] }}</p>
-                    <a href=" {{ show.location_url }} "> {{ show.location}} </a>
+                <a class = "nav-link" href=" {{ show.title_fix }} "> {{ show.title }} </a>
+                    <p class="card-text nav-link">{{ show['date'] }}</p>
+                    <a class= "nav-link" href=" {{ show.location_url }} "> {{ show.location}} </a>
                     <p></p><button onclick="wannadiaryposting({{ show.title }})" type="button" class="btn btn-light float-right">찜하기</button>
             </div>
         </div>
