--- a/templates/show.html
+++ b/templates/show.html
@@ -231,6 +231,7 @@
             width: 300px;
             height: 650px;
             display: inline-block;
+            margin: 20px;
         }
         
         .card-columns {
@@ -241,6 +242,7 @@
             flex-direction: row;
             flex-wrap: wrap;
             justify-content: space-evenly;
+            align-items: baseline;
         }
 
     
